# architect-py

./: .coveragerc  .gitignore  CHANGELOG.md  FUNCTIONS.md  LICENSE  MAINTAINERS.md  README.md  ariadne-codegen.async.toml  ariadne-codegen.toml  generate_functionsmd.py  generate_protocol.py  generate_readme.py  generate_sync_client_protocol.py  justfile  postprocess_grpc_file.py  postprocess_grpc_types.py  preprocess_grpc_types.py  preprocess_grpc_types3.py  pyproject.toml  pyproject_async.toml  pyrightconfig.json  queries.async.graphql  queries.graphql  schema.graphql  test.py  update.sh  version
architect_py/: __init__.py  _version.py  async_client.py  async_cpty.py  batch_place_order.py  client.py  client.pyi  client_interface.py  client_protocol.py  scalars.py
architect_py/async_graphql_client/: __init__.py  cancel_all_orders.py  cancel_order.py  cancel_orders.py  client.py  fills_subscription.py  fragments.py  get_accounts.py  get_algo_order.py  get_algo_status.py  get_all_market_snapshots.py  get_all_open_orders.py  get_balances_for_cpty.py  get_book_snapshot.py  get_fills.py  get_first_notice_date.py  get_market.py  get_market_snapshot.py  get_mm_order.py  get_mm_status.py  get_out_orders.py  get_pov_order.py  get_pov_status.py  get_smart_order_router_order.py  get_smart_order_router_status.py  get_spread_order.py  get_spread_status.py  get_tick_size.py  get_twap_order.py  get_twap_status.py  input_types.py  juniper_async_base_client.py  send_mm_algo_request.py  send_order.py  send_orders.py  send_pov_algo_request.py  send_smart_order_router_algo_request.py  send_spread_algo_request.py  send_twap_algo_request.py  subscribe_book.py  (+3 more)
architect_py/common_types/: __init__.py  order_dir.py  scalars.py  time_in_force.py  tradable_product.py
architect_py/graphql_client/: __init__.py  base_client.py  cancel_all_orders.py  cancel_all_orders_mutation.py  cancel_order.py  cancel_order_mutation.py  cancel_orders.py  client.py  create_jwt.py  enums.py  fills_subscription.py  fragments.py  future_series.py  get_account_history_query.py  get_account_query.py  get_account_summaries.py  get_account_summaries_query.py  get_account_summary.py  get_account_summary_query.py  get_accounts.py  get_algo_order.py  get_algo_status.py  get_all_open_orders.py  get_all_open_orders_query.py  get_balances_for_cpty.py  get_book_snapshot.py  get_candle_snapshot_query.py  get_execution_info.py  get_execution_info_query.py  get_execution_infos_query.py  get_fills.py  get_fills_query.py  get_first_notice_date.py  get_first_notice_date_query.py  get_future_series_query.py  get_historical_orders.py  get_historical_orders_query.py  (+58 more)
examples/: README.md  algos.py  book_snapshot.py  book_subscription.py  books.py  candles.py  common.py  config.py  external_cpty.py  funding_rate_mean_reversion_algo.py  jupyter_example.ipynb  market_snapshots.py  options_example.py  order_sending.py  orderflow_channel.py  orderflow_streaming.py  stream_l1_marketdata.py  stream_l2_marketdata.py  symbology.py  termutils.py  trades.py  tutorial.py  tutorial_async.py  tutorial_sync.py
graphql_client/: __init__.py  balances_for_cpty.py  client.py  enums.py  fragments.py  get_all_market_snapshots.py  get_balances_for_cpty.py  get_filtered_markets.py  get_market.py  get_open_orders.py  get_order.py  get_out_orders.py  open_orders_from_oms.py  send_order.py  subscribe_candles.py  trades_for_market.py
processed_schemas/: definitions.json  schema.json
scripts/: add_imports_to_inits.py  check_version.sh  correct_sync_interface.py  generate_functions_md.py  generate_sync_interface.py  postprocess_grpc.py  preprocess_grpc_schema.py  prune_graphql_schema.py  update_schema.sh
templates/: grpc_client.py  juniper_async_base_client.py  juniper_base_client.py  msgspec.jinja2
tests/: README.md  async_test.py  conftest.py  pytest.ini  pytest_example.ini  test.py  test_client.py  test_cme_symbology.py  test_order_sending.py  test_orderflow.py  test_symbology.py
(+816 files in other folders)
