[tool.poetry]
name = "architect-py"
version = "1.1.0"
description = "Client library for the Architect trading platform."
authors = ["Architect Financial Technologies, Inc. <hello@architect.xyz>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha"
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
asyncio = "^3.4.3"
gql = {extras = ["all"], version = "^3.5.0"}
pydantic = "^2.6.4"
httpx = "^0.27.0"
websockets = "^11"

[tool.poetry.group.dev.dependencies]
ariadne-codegen = {extras = ["subscriptions"], version = "^0.13.0"}
python-dotenv = "^1.0.1"
simplewebsocketserver = "^0.1.2"

[tool.ariadne-codegen]
target_package_path = "./architect_py"
client_name = "GraphQLClient"
schema_path = "schema.graphql"
queries_path = "queries.graphql"
base_client_name = "JuniperAsyncBaseClient"
base_client_file_path = "./templates/juniper_async_base_client.py"
files_to_include = ["./templates/exceptions.py"]
plugins = ["ariadne_codegen.contrib.shorter_results.ShorterResultsPlugin"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
