[project]
authors = [
    { name = "Architect Financial Technologies, Inc.", email = "hello@architect.co" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "asyncio>=3",
    "dnspython>=2.0",
    "gql[httpx]>=3.5.0,<4",
    "grpcio>=1.66.1",
    "msgspec>=0.19,<0.20",
    "pandas>=2",
    "pydantic~=2.10",
    "websockets>=11",
]
description = "Python SDK for the Architect trading platform and brokerage."
license = "Apache-2.0"
name = "architect-py"
readme = "README.md"
requires-python = ">=3.10,<4"
version = "5.6.0"

[dependency-groups]
dev = [
    "ariadne-codegen[subscriptions]>=0.13.0",
    "black>=24",
    "datamodel-code-generator>=0.28.0",
    "graphql-core",
    "jupyterlab",
    "marko",
    "mypy>=1.15.0",
    "pyright>=1.1.399",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.1.1",
    "pytest-lazy-fixtures>=1.1.2",
    "pytest-timeout>=2,<3",
    "python-dotenv>=1,<2",
    "ruff>=0.11.6",
    "simplewebsocketserver>=0.1.2,<0.2",
    "ufmt>=2,<3",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
exclude = []

[tool.ruff]
extend-exclude = [
    "architect_py/graphql_client",
    "architect_py/grpc/models",
    "architect_py/client_interface.py",
    "templates",
]

[tool.ruff.lint]
ignore = ["F403", "F405"]
select = ["E4", "E7", "E9", "F", "I"]


[project.urls]
Documentation = "https://docs.architect.co"
Homepage = "https://www.architect.co/brokerage/overview"
Repository = "https://github.com/architect-xyz/architect-py"
